--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,14 @@
         <dependency>
             <groupId>com.flexicore</groupId>
             <artifactId>FlexiCore</artifactId>
-            <version>1.9.8</version>
+            <version>2.0.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.flexicore</groupId>
+            <artifactId>flexicore-territories-model</artifactId>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
