--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
 
     <groupId>com.flexicore</groupId>
     <artifactId>product-model</artifactId>
-    <version>1.1.1</version>
+    <version>1.2.0</version>
     <properties>
-        <version.wildfly.bom>10.0.0.Final</version.wildfly.bom>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <version.eclipselink>2.7.1</version.eclipselink>
+        <jackson.version>2.9.5</jackson.version>
+
     </properties>
 
 
@@ -43,13 +44,10 @@
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>org.wildfly.bom</groupId>
-                <artifactId>wildfly-javaee7</artifactId>
-                <version>${version.wildfly.bom}</version>
-
-                <scope>import</scope>
+                <artifactId>wildfly</artifactId>
+                <version>14.0.1.Final</version>
                 <type>pom</type>
             </dependency>
 
@@ -57,9 +55,15 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+        <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.flexicore</groupId>
             <artifactId>FlexiCore</artifactId>
-            <version>2.1.1</version>
+            <version>2.3.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -94,33 +98,18 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>1.0.0.Final</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
+            <version>2.0</version>
             <scope>provided</scope>
         </dependency>
-
-
-
-
-
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jaxrs</artifactId>
-            <version>1.5.12</version>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
+            <version>2.0.6</version>
             <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
+
 
     </dependencies>
 
