--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.flexicore</groupId>
+            <artifactId>rules-model</artifactId>
+            <version>1.1.9</version>
+            <scope>provided</scope>
+        </dependency>
 
 
         <dependency>
