--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.flexicore</groupId>
+    <groupId>com.wizzdi</groupId>
     <artifactId>product-model</artifactId>
     <version>2.0.4</version>
     <properties>
@@ -13,6 +13,7 @@
         <version.eclipselink>2.7.1</version.eclipselink>
         <jackson.version>2.9.5</jackson.version>
 
+        <flexicore-api.version>4.0.7</flexicore-api.version>
     </properties>
 
 
@@ -44,6 +45,14 @@
 
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.10.2</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -51,9 +60,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.flexicore</groupId>
-            <artifactId>FlexiCore</artifactId>
-            <version>2.9.0</version>
+            <groupId>com.wizzdi</groupId>
+            <artifactId>flexicore-api</artifactId>
+            <version>${flexicore-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -79,13 +88,19 @@
             <version>${version.eclipselink}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.wizzdi</groupId>
+            <artifactId>flexicore-iot-model</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
 
 
 
         <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <version>2.0</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -113,7 +128,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -122,17 +137,9 @@
                         </goals>
                         <configuration>
 
-                            <minimizeJar>true</minimizeJar>
+                            <minimizeJar>false</minimizeJar>
                             <createDependencyReducedPom>true</createDependencyReducedPom>
-                            <dependencyReducedPomLocation>
-                                ${java.io.tmpdir}/dependency-reduced-pom.xml
-                            </dependencyReducedPomLocation>
-                            <relocations>
-                                <relocation>
-                                    <pattern>com.acme.coyote</pattern>
-                                    <shadedPattern>hidden.coyote</shadedPattern>
-                                </relocation>
-                            </relocations>
+                            <dependencyReducedPomLocation>${java.io.tmpdir}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                         </configuration>
                     </execution>
                 </executions>
@@ -161,8 +168,7 @@
                                 </processor>
                             </processors>
                             <outputDirectory>${project.build.directory}/generated-sources/meta-model
-                            </outputDirectory>
-                        </configuration>
+                            </outputDirectory></configuration>
                     </execution>
                 </executions>
                 <dependencies>
@@ -176,9 +182,9 @@
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>com.flexicore</groupId>
-                <artifactId>flexicore-plugin</artifactId>
-                <version>1</version>
+                <groupId>com.wizzdi</groupId>
+                <artifactId>metamodel-inheritence-fix-processor</artifactId>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <id>flexicore</id>
