--- a/pom.xml
+++ b/pom.xml
@@ -67,16 +67,16 @@
         </dependency>
 
         <dependency>
-            <groupId>com.flexicore</groupId>
+            <groupId>com.wizzdi</groupId>
             <artifactId>flexicore-territories-model</artifactId>
-            <version>1.1.0</version>
+            <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>com.flexicore</groupId>
+            <groupId>com.wizzdi</groupId>
             <artifactId>organization-model</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.2</version>
             <scope>provided</scope>
         </dependency>
 
