--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>product-model</artifactId>
     <version>2.3.0-SNAPSHOT</version>
     <name>product-model</name>
-    <description>FlexiCore service plugin , manages products and equipments</description>
+    <description>FlexiCore model plugin , manages products and equipments</description>
     <url>https://wizzdi.com</url>
 
     <licenses>
