--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.wizzdi</groupId>
     <artifactId>product-model</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.0.0</version>
     <name>product-model</name>
     <description>FlexiCore model plugin , manages products and equipments</description>
     <url>https://wizzdi.com</url>
@@ -56,7 +56,7 @@
         <connection>scm:git:git://wizzdi/product-model.git</connection>
         <developerConnection>scm:git:git@github.com:wizzdi/product-model.git</developerConnection>
         <url>https://github.com/wizzdi/product-model</url>
-        <tag>product-model-{version}</tag>
+        <tag>product-model-5.0.0</tag>
     </scm>
 
     <dependencyManagement>
